# advancedrobotics

./: CMakeLists.txt  README.md  package.xml
arduino/ros_razor/ros_razor/: ros_razor.ino
config/: MX106.yaml  meta_controller.yaml
dev_rules/: 50-usb-serial.rules  75-usb-rw.rules
launch/: all.launch  controller_manager.launch
src/manual_control/: controller.py  utils.py
src/stewart/: pid.py  stewart.py  utils.py
src/tests/: InverseKinematics.hpp  MotorControl.hpp  accel_test.cpp  ik_test.cpp  main.cpp
